--- a/src/public/css/preguntas_seguridad.css
+++ b/src/public/css/preguntas_seguridad.css
@@ -1,3 +1,117 @@
+/* DISEÑO DEL MENU */
+/* Archivo para montar carpeta en Git hub */
+* {
+  margin: 0;
+  padding: 0;
+}
+
+.dropdown-arrow {
+  width: auto;
+  height: 20px;
+  position: relative;
+  margin-left: auto;
+}
+
+.row {
+  width: 100%;
+  height: 100vh;
+}
+
+#settings-button,
+#users-button,
+#records-button,
+#groups-button,
+#reports-button,
+#access-button,
+#export-button,
+#admin-button,
+#config-button {
+  border-bottom: 2px solid rgba(0, 0, 0, 0.2);
+}
+
+.aside {
+  background-color: #1E3DEA;
+}
+
+.btn {
+  width: 100%;
+  height: 52px;
+  background-color: #4961E4;
+  font-size: 18px;
+}
+
+.admin-section {
+  margin-top: auto;
+  padding-bottom: 20px;
+}
+
+th {
+  background-color: #1E3DEA;
+}
+
+.header-row {
+  align-items: center;
+  height: 60px;
+}
+
+.header-row h1 {
+  margin: 0;
+  line-height: 60px;
+}
+
+.header-row .btn {
+  line-height: 40px;
+}
+
+.content {
+  padding-top: 20px;
+}
+
+#settings-dropdown .btn,
+#users-dropdown .btn,
+#records-dropdown .btn,
+#access-dropdown .btn,
+#admin-dropdown .btn,
+#config-dropdown .btn {
+  line-height: 1;
+  /* Ajusta la altura de línea para evitar cortes */
+  padding: 10px;
+  /* Ajusta el padding si es necesario */
+  text-align: left;
+  /* Asegura que el texto esté alineado a la izquierda */
+}
+
+.gbtn {
+  width: 20%;
+  height: 45px;
+  background-color: #4961E4;
+  font-size: 15px;
+}
+
+.content {
+  display: flex;
+  justify-content: center;
+  padding-top: 40px;
+}
+
+.content {
+  flex: 1;
+  /* Permite que la columna .content ocupe el espacio restante */
+  padding: 20px;
+  /* Ajusta el padding según tus necesidades */
+}
+
+@media screen and (width<=1400px) {
+  .aside {
+    width: 240px;
+
+  }
+
+}
+
+
+/* CIERRE DISEÑO DEL MENU */
+
 body {
   font-family: sans-serif;
   margin: 0;
@@ -5,116 +119,12 @@ body {
   background-color: #f2f2f2;
 }
 
-nav{
-  background-color: #394DC0;
-  width: 100%;
-  height: 80px;
-}
-.nav__item{
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-}
-.nav__item > i{
-  font-size: 40px;
-  cursor: pointer;
-  margin: 20px 10px;
-  color: white;
-}
-
-.caja__notifica{
-  background-color: #43496b;
-  width: 350px;
-  height: 400px;
-  position: absolute;
-  top: 65px;
-  right: 70px;
-  color: white;
-  transition: 0.5s;
-  border-radius: 10px;
-  display: none;
-}
-.noti__head{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-bottom: 1px solid black;
-  padding: 10px;
-}
-.noti__head > p{
-  color: black;
-}
-.noti__main{
-  width: 100%;
-  height: 100%;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 13% 76% 13%;
-}
-.noti__body{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.noti__footer{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-top: 1px solid black;
-}
-.active{
-  display: block;
-}
-
-.config{
-  background-color: gray;
-  width: 350px;
-  height: auto;
-  position: absolute;
-  display: none;
-  top: 80px;
-  right: 0px;
-  color: white;
-  border-radius: 0 0 0 15px;
-  transition: 0.5s;
-}
-
-.config__body{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  padding: 20px;
-
-}
-.config__body > a{
-  width: auto;
-  min-width: 230px;
-  padding: 10px;
-  background: #b1b1b1;
-  border-radius: 10px;
-  text-decoration: none;
-  color: white;
-  margin-top: 10px;
-  transition: .2s;
-}
-.config__body > a:hover{
-  background: #8d8d8d;
-  transition: .2s;
-}
-.config__body > .cerrarSesion{
-  background: #C90000;
-  transition: .2s;
-}
-.activeC{
-  display: block;
-}
 
 .toggle-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #3b5998; 
+  background-color: #3b5998;
   padding: 7px 40px;
   border-radius: 5px;
   width: fit-content;
@@ -153,11 +163,11 @@ nav{
   transition: transform 0.3s;
 }
 
-.toggle-switch:checked + .switch::before {
+.toggle-switch:checked+.switch::before {
   transform: translateX(20px);
 }
 
-.toggle-switch:checked + .switch {
+.toggle-switch:checked+.switch {
   background-color: #181a18;
 }
 
@@ -177,84 +187,6 @@ input[type="text"] {
   box-sizing: border-box;
 }
 
-flecha 
-
-.arrow {
-  margin-right: 1100px;
-}
-
-.button {
-  display: block;
-  position: relative;
-  width: 56px;
-  height: 56px;
-  margin: 0;
-  overflow: hidden;
-  outline: none;
-  background-color: transparent;
-  cursor: pointer;
-  border: 0;
-}
-
-.button:before,
-.button:after {
-  content: "";
-  position: absolute;
-  border-radius: 50%;
-  inset: 7px;
-}
-
-.button:before {
-  border: 4px solid #ffffff;
-  transition: opacity 0.4s cubic-bezier(0.77, 0, 0.175, 1) 80ms,
-    transform 0.5s cubic-bezier(0.455, 0.03, 0.515, 0.955) 80ms;
-}
-
-.button:after {
-  border: 4px solid #394DC0;
-  transform: scale(1.3);
-  transition: opacity 0.4s cubic-bezier(0.165, 0.84, 0.44, 1),
-    transform 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94);
-  opacity: 0;
-}
-
-.button:hover:before,
-.button:focus:before {
-  opacity: 0;
-  transform: scale(0.7);
-  transition: opacity 0.4s cubic-bezier(0.165, 0.84, 0.44, 1),
-    transform 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94);
-}
-
-.button:hover:after,
-.button:focus:after {
-  opacity: 1;
-  transform: scale(1);
-  transition: opacity 0.4s cubic-bezier(0.77, 0, 0.175, 1) 80ms,
-    transform 0.5s cubic-bezier(0.455, 0.03, 0.515, 0.955) 80ms;
-}
-
-.button-box {
-  display: flex;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-.button-elem {
-  display: block;
-  width: 20px;
-  height: 20px;
-  margin: 17px 18px 0 18px;
-  transform: rotate(180deg);
-  fill: #000000;
-}
-
-.button:hover .button-box,
-.button:focus .button-box {
-  transition: 0.4s;
-  transform: translateX(-56px);
-}
 
 
 .header button {
@@ -270,30 +202,29 @@ flecha
   padding: 20px;
   margin-bottom: 20px;
   border-radius: 10px;
-  width: 50%;
+  width: 90%;
   font-family: sans-serif;
   gap: 30px;
+ 
 }
 
 .buttons {
   margin: 20px 0;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
 
 .button1 {
   padding: 10px 20px;
-  margin-left: 110px;
   border: none;
   border-radius: 5px;
-  background-color: #404140;
+  background-color: #09c902;
   color: #fff;
   cursor: pointer;
 }
 
 .button2 {
   padding: 10px 20px;
-  margin-right: 110px;
   border: none;
   border-radius: 5px;
   background-color: #ffffff;
@@ -306,194 +237,6 @@ flecha
   background-color: #d1d1d1;
 }
 
-/* CAMPANA */
-/* From Uiverse.io by 3bdel3ziz-T */
-/*making bell shape with one div */
-.bell {
-  border: 2.17px solid white;
-  border-radius: 10px 10px 0 0;
-  width: 15px;
-  height: 17px;
-  background: transparent;
-  display: block;
-  position: relative;
-  top: -3px;
-}
-
-.bell::before,
-.bell::after {
-  content: "";
-  background: white;
-  display: block;
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  height: 2.17px;
-}
-
-.bell::before {
-  top: 100%;
-  width: 20px;
-}
-
-.bell::after {
-  top: calc(100% + 4px);
-  width: 7px;
-}
-
-.notification {
-  background: transparent;
-  border: none;
-  padding: 15px 15px;
-  border-radius: 50px;
-  cursor: pointer;
-  transition: 300ms;
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.notification::before {
-  content: "1";
-  color: white;
-  font-size: 10px;
-  width: 12px;
-  height: 12px;
-  border-radius: 50%;
-  background-color: red;
-  position: absolute;
-  right: 8px;
-  top: 8px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 1000;
-}
-
-.notification:hover {
-  background: rgba(170, 170, 170, 0.062);
-}
-
-.notification:hover>.bell-container {
-  animation: bell-animation 650ms ease-out 0s 1 normal both;
-}
-
-@keyframes bell-animation {
-  20% {
-    transform: rotate(15deg);
-  }
-
-  40% {
-    transform: rotate(-15deg);
-    scale: 1.1;
-  }
-
-  60% {
-    transform: rotate(10deg);
-    scale: 1.1;
-  }
-
-  80% {
-    transform: rotate(-10deg);
-  }
-
-  0%,
-  100% {
-    transform: rotate(0deg);
-  }
-}
-
-
-/* AJIUSTES */
-/* From Uiverse.io by vinodjangid07 */
-.setting-btn {
-  width: 55px;
-  height: 45px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 6px;
-  background-color: #394DC0;
-  border-radius: 10px;
-  cursor: pointer;
-  border: none;
-}
-
-.bar {
-  width: 50%;
-  height: 2px;
-  background-color: rgb(229, 229, 229);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  border-radius: 2px;
-}
-
-.bar::before {
-  content: "";
-  width: 2px;
-  height: 2px;
-  background-color: #394DC0;
-  position: absolute;
-  border-radius: 50%;
-  border: 2px solid white;
-  transition: all 0.3s;
-  box-shadow: 0px 0px 5px white;
-}
-
-.bar1::before {
-  transform: translateX(-4px);
-}
-
-.bar2::before {
-  transform: translateX(4px);
-}
-
-.setting-btn:hover .bar1::before {
-  transform: translateX(4px);
-}
-
-.setting-btn:hover .bar2::before {
-  transform: translateX(-4px);
-}
-
-
-/* Cerrar sesion */
-/* From Uiverse.io by MUJTABA201566 */
-.Btn {
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  width: 45px;
-  height: 45px;
-  border: none;
-  border-radius: 50%;
-  cursor: pointer;
-  position: relative;
-  overflow: hidden;
-  background-color: #394DC0;
-}
-
-/* plus sign */
-.sign {
-  width: 100%;
-  transition-duration: 0.3s;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.sign svg {
-  width: 25px;
-}
-
-.sign svg path {
-  fill: rgb(255, 255, 255);
-}
-
 
 /* hover effect button's text */
 .Btn:hover .text {
@@ -502,6 +245,7 @@ flecha
   transition-duration: 0.3s;
   padding-right: 10px;
 }
+
 
 /* button click effect*/
 .Btn:active {
@@ -527,9 +271,9 @@ flecha
   margin: 5% auto;
   padding: 20px;
   border: 1px solid #888;
-  width: 80%;
-  max-width: 500px;
+  width: 550px;
   border-radius: 5px;
+  text-align: center;
 }
 
 .close {
@@ -538,6 +282,8 @@ flecha
   font-size: 28px;
   font-weight: bold;
   cursor: pointer;
+
+  margin-right: 450px;
 }
 
 .close:hover,
@@ -605,4 +351,44 @@ flecha
 
 .inputGroup :is(input:focus, input:valid) {
   border-color: rgb(150, 150, 200);
+}
+
+
+.caja_cont_pregunta {
+  display: grid;
+  grid-template-columns: 5fr 1fr;
+  grid-template-rows: repeat(1fr, 4);
+  text-align: start;
+  margin-bottom: 20px;
+}
+
+.dos {
+  grid-row: 2;
+  grid-column: 1;
+}
+
+.tres {
+  grid-row: 3;
+  grid-column: 1;
+}
+
+.cuatro {
+  grid-row: 4;
+  grid-column: 1;
+}
+
+.cja_boton{
+  grid-row: span 4;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.boton3{
+  width: 80px;
+  height: 40px;
+  background-color: rgb(255, 92, 92);
+  border-radius: 5px;
+  border: none;
+  color: white;
 }
