--- a/src/views/views.complejidad.preguntas.ejs
+++ b/src/views/views.complejidad.preguntas.ejs
@@ -164,9 +164,9 @@
             </div>
         </div>
     </div>
-    </div>
+    <!-- </div>
 
-    </div>
+    </div> -->
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="js/complejidad.preguntas.js"></script>
