--- a/src/views/components/menu.ejs
+++ b/src/views/components/menu.ejs
@@ -92,10 +92,14 @@
             <h1 style="color: white; font-size: 20px; margin-bottom: 0;">Administrador</h1>
             <p style="color: gainsboro;">admin@gmail.com</p>
         </div>
-        <div class="mt-4" style="color: white;">
-            <img src="/img/menu-puntos-vertical 1.png" alt="">
+        <div class="mt-4 menu" style="position: relative; color: white;">
+            <img src="/img/menu-puntos-vertical 1.png" alt="" id="admin-menu-icon">
+            <div id="admin-mini-menu"   >
+                <a href="/" class="btn btn-secondary text-start text-light text-decoration-none" id="logout">Cerrar sesión</a>
+            </div>
         </div>
     </div>
+    
 </div>
 
 <script src="/js/dropdown-panel.js"></script>
