--- a/src/views/components/menu.ejs
+++ b/src/views/components/menu.ejs
@@ -58,6 +58,7 @@
                         bloqueadas</a>
                     <a href="/admin/usuarios-inactivos" class="btn text-start text-light text-decoration-none">Usuarios
                         inactivos</a>
+                    <a href="/admin/solicitudes" class="btn text-start text-light text-decoration-none">Solicitudes</a>
                 </div>
             </div>
 
