--- a/src/views/admin/views.solicitudes.ejs
+++ b/src/views/admin/views.solicitudes.ejs
@@ -13,10 +13,8 @@
         <div class="row">
             <%- include('../components/menu'); %>
             <div class="content col-md-10">
-                <h1 class="mb-4">Solicitudes</h1>
-                
+                <h1 class="mb-4">Solicitudes</h1>                
                 <div class="row">
-                  <!-- Sección de Eliminación -->
                   <div class="col-md-6 mb-4">
                     <div class="card">
                       <div class="card-header bg-danger text-white">
@@ -51,8 +49,6 @@
                       </div>
                     </div>
                   </div>
-
-                  <!-- Sección de Exportar Datos -->
                   <div class="col-md-6 mb-4">
                     <div class="card">
                       <div class="card-header bg-primary text-white">
@@ -85,12 +81,10 @@
                     </div>
                   </div>
                 </div>
-              
-
               </div>
         </div>
     </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-<script src="/js/soli.js"></script>
+<script src="/js/solicitudesAdmin.js"></script>
 </html>
