--- a/src/views/admin/views.solicitudes.ejs
+++ b/src/views/admin/views.solicitudes.ejs
@@ -69,7 +69,7 @@
                               <td><%= solicitud.nombre_usuario || 'Desconocido' %></td>
                               <td><%= solicitud.estado %></td>
                               <td>
-                                <button class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="#confirmModal" data-action="export" data-user="<%= solicitud.nombre_usuario %>" data-id="<%= solicitud.id %>">
+                                <button class="btn btn-primary btn-sm"  data-action="export" data-user="<%= solicitud.nombre_usuario %>" data-id="<%= solicitud.id %>">
                                   Exportar
                                 </button>
                               </td>
@@ -84,6 +84,8 @@
               </div>
         </div>
     </div>
+
+    
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="/js/solicitudesAdmin.js"></script>
