--- a/src/views/components/menu.ejs
+++ b/src/views/components/menu.ejs
@@ -2,110 +2,126 @@
     <div class="d-flex flex-column justify-content-between" style="flex-grow: 1;">
         <!-- Encabezado -->
         <a class="header d-flex align-items-center justify-content-center mt-5 text-decoration-none" href="/panel">
-            <img class="title" src="/img/logo/logoApex.png" alt="Apex-Logo"
-                style="height: 50px; margin-right: 10px;">
+            <img class="title" src="/img/logo/logoApex.png" alt="Apex-Logo" style="height: 50px; margin-right: 10px;">
             <h1 style="color: white; font-size: 30px; font-weight:700">Apex</h1>
         </a>
         <!-- Contenido principal -->
-        <div class="d-flex flex-column align-items-center justify-content-center mt-2" style="flex-grow: 1;">
-            <!-- Accesos Dropdown -->
-            <button class="btn-action d-flex align-items-center justify-content-between mt-2" id="access-button">
-                <span class="text-start">Accesos</span>
-                <i class="fa-solid fa-chevron-down"></i>
-            </button>
-            <div id="access-dropdown" style="display: none; flex-direction: column; height: auto; width: 100%;">
-                <div class="dropdown">
-                    <a href="#" class="btn text-start text-light text-decoration-none">Configuración de acceso</a>
-                    <a href="#" class="btn text-start text-light text-decoration-none">Intentos de acceso</a>
+        <% if (user.rol ==='Administrador' ) { %>
+            <div class="d-flex flex-column align-items-center justify-content-center mt-2" style="flex-grow: 1;">
+                <!-- Accesos Dropdown -->
+                <button class="btn-action d-flex align-items-center justify-content-between mt-2" id="access-button">
+                    <span class="text-start">Accesos</span>
+                    <i class="fa-solid fa-chevron-down"></i>
+                </button>
+                <div id="access-dropdown" style="display: none; flex-direction: column; height: auto; width: 100%;">
+                    <div class="dropdown">
+                        <a href="#" class="btn text-start text-light text-decoration-none">Configuración de acceso</a>
+                        <a href="#" class="btn text-start text-light text-decoration-none">Intentos de acceso</a>
+                    </div>
+                </div>
+
+                <!-- Grupos Dropdown -->
+                <a href="/admin/crear-grupos"" class=" btn-action d-flex align-items-center justify-content-between
+                    mt-2">Grupos</a>
+
+                <!-- Informes Dropdown -->
+                <a href="/informeActividad"
+                    class=" btn btn-action d-flex align-items-center justify-content-between mt-2 text-start text-light text-decoration-none">Informes</a>
+
+                <!-- Logs Dropdown -->
+                <button class="btn-action d-flex align-items-center justify-content-between mt-2" id="admin-button">
+                    <span class="text-start">Logs</span>
+                    <i class="fa-solid fa-chevron-down"></i>
+                </button>
+                <div id="admin-dropdown" style="display: none; flex-direction: column; height: auto; width: 100%;">
+                    <div class="dropdown">
+                        <a href="#" class="btn text-start text-light text-decoration-none">Configuración de Logs </a>
+                        <a href="#" class="btn text-start text-light text-decoration-none">Logs de seguridad</a>
+
+                    </div>
+                </div>
+
+                <!-- Modulos Dropdown -->
+                <a href="#"
+                    class="btn-action d-flex align-items-center justify-content-between mt-2 text-start text-light text-decoration-none">Módulos</a>
+
+                <!-- Usuarios Dropdown -->
+                <button class="btn-action d-flex align-items-center justify-content-between mt-2" id="users-button">
+                    <span class="text-start">Usuarios</span>
+                    <i class="fa-solid fa-chevron-down"></i>
+                </button>
+                <div id="users-dropdown" style="display: none; flex-direction: column; height: auto; width: 100%;">
+                    <div class="dropdown">
+                        <a href="/admin/registro-dispositivos"
+                            class="btn text-start text-light text-decoration-none">Registros de inicio de sesión</a>
+                        <a href="#" class="btn text-start text-light text-decoration-none">Registros de
+                            usuarios</a>
+                        <a href="/admin/cuentas-bloqueadas"
+                            class="btn text-start text-light text-decoration-none">Cuentas
+                            bloqueadas</a>
+                        <a href="/admin/usuarios-inactivos"
+                            class="btn text-start text-light text-decoration-none">Usuarios
+                            inactivos</a>
+                    </div>
+                </div>
+
+                <!-- Seguridad Dropdown -->
+                <button class="btn btn-action d-flex align-items-center justify-content-between mt-2"
+                    id="records-button">
+                    <span class="text-start">Seguridad</span>
+                    <i class="fa-solid fa-chevron-down"></i>
+                </button>
+                <div id="records-dropdown" style="display: none; flex-direction: column; height: 100%; width: 100%;">
+                    <div class="dropdown">
+                        <a href="#" class="btn text-start text-light text-decoration-none">Panel de seguridad</a>
+                        <a href="#" class="btn text-start text-light text-decoration-none">Copias de seguridad</a>
+                        <a href="#" class="btn text-start text-light text-decoration-none">Exportación de
+                            datos</a>
+                        <a href="/sesiones" class="btn text-start text-light text-decoration-none">Inicios de
+                            sesión</a>
+                        <a href="#" class="btn text-start text-light text-decoration-none">Detección</a>
+                        <a href="/historialc" class="btn text-start text-light text-decoration-none">Monitoreo</a>
+                        <a href="/verificacionDoble1"
+                            class="btn text-start text-light text-decoration-none">Autenticación de
+                            dos
+                            factores</a>
+                        <a href="/config" class="btn text-start text-light text-decoration-none">Configuración del
+                            sistema</a>
+                        <a href="/complejidadPreguntas" class="btn text-start text-light text-decoration-none">Preguntas
+                            de
+                            Seguridad</a>
+                        <a href="#" class="btn text-start text-light text-decoration-none">Encriptación de
+                            contraseñas</a>
+                    </div>
                 </div>
             </div>
+            <% } else if (user.rol ==='Usuario' ) { %>
+                <a href="">Eres usuario</a>
+                <% } %>
 
-            <!-- Grupos Dropdown -->
-            <a href="/admin/crear-grupos"" class="btn-action d-flex align-items-center justify-content-between mt-2">Grupos</a>
+                    <!-- Pie de menu -->
 
-            <!-- Informes Dropdown -->
-            <a href="/informeActividad"
-                class=" btn btn-action d-flex align-items-center justify-content-between mt-2 text-start text-light text-decoration-none">Informes</a>
+                    <div class="d-flex justify-content-center align-items-center gap-4" style="margin-top: auto;">
+                        <div>
+                            <p>
+                                <%= user.rol %>
+                                    <%= user.nombre_usuario %>
+                            </p>
+                            <p>
+                                <%= user.email %>
+                            </p>
+                        </div>
+                        <div>
+                            <i class="fa-solid fa-ellipsis-vertical" style="font-size: 2rem;" id="menu-toggle"></i>
+                        </div>
 
-            <!-- Logs Dropdown -->
-            <button class="btn-action d-flex align-items-center justify-content-between mt-2" id="admin-button">
-                <span class="text-start">Logs</span>
-                <i class="fa-solid fa-chevron-down"></i>
-            </button>
-            <div id="admin-dropdown" style="display: none; flex-direction: column; height: auto; width: 100%;">
-                <div class="dropdown">
-                    <a href="#" class="btn text-start text-light text-decoration-none">Configuración de Logs </a>
-                    <a href="#" class="btn text-start text-light text-decoration-none">Logs de seguridad</a>
-
-                </div>
-            </div>
-
-            <!-- Modulos Dropdown -->
-            <a href="#"
-                class="btn-action d-flex align-items-center justify-content-between mt-2 text-start text-light text-decoration-none">Módulos</a>
-
-            <!-- Usuarios Dropdown -->
-            <button class="btn-action d-flex align-items-center justify-content-between mt-2" id="users-button">
-                <span class="text-start">Usuarios</span>
-                <i class="fa-solid fa-chevron-down"></i>
-            </button>
-            <div id="users-dropdown" style="display: none; flex-direction: column; height: auto; width: 100%;">
-                <div class="dropdown">
-                    <a href="/admin/registro-dispositivos" class="btn text-start text-light text-decoration-none">Registros de inicio de sesión</a>
-                    <a href="#" class="btn text-start text-light text-decoration-none">Registros de
-                        usuarios</a>
-                    <a href="/admin/cuentas-bloqueadas" class="btn text-start text-light text-decoration-none">Cuentas
-                        bloqueadas</a>
-                    <a href="/admin/usuarios-inactivos" class="btn text-start text-light text-decoration-none">Usuarios
-                        inactivos</a>
-                </div>
-            </div>
-
-            <!-- Seguridad Dropdown -->
-            <button class="btn btn-action d-flex align-items-center justify-content-between mt-2" id="records-button">
-                <span class="text-start">Seguridad</span>
-                <i class="fa-solid fa-chevron-down"></i>
-            </button>
-            <div id="records-dropdown" style="display: none; flex-direction: column; height: 100%; width: 100%;">
-                <div class="dropdown">
-                    <a href="#" class="btn text-start text-light text-decoration-none">Panel de seguridad</a>
-                    <a href="#" class="btn text-start text-light text-decoration-none">Copias de seguridad</a>
-                    <a href="#" class="btn text-start text-light text-decoration-none">Exportación de
-                        datos</a>
-                    <a href="/sesiones" class="btn text-start text-light text-decoration-none">Inicios de
-                        sesión</a>
-                    <a href="#" class="btn text-start text-light text-decoration-none">Detección</a>
-                    <a href="/historialc" class="btn text-start text-light text-decoration-none">Monitoreo</a>
-                    <a href="/verificacionDoble1" class="btn text-start text-light text-decoration-none">Autenticación de
-                        dos
-                        factores</a>
-                    <a href="/config" class="btn text-start text-light text-decoration-none">Configuración del
-                        sistema</a>
-                    <a href="/complejidadPreguntas" class="btn text-start text-light text-decoration-none">Preguntas de
-                        Seguridad</a>
-                    <a href="#" class="btn text-start text-light text-decoration-none">Encriptación de
-                        contraseñas</a>
-                </div>
-            </div>
-        </div>
-
-        <!-- Pie de menu -->
-
-        <div class="d-flex justify-content-center align-items-center gap-4" style="margin-top: auto;">
-            <div>
-                <p>Administrador</p>
-                <p>admin@gmail.com</p>
-            </div>
-            <div>
-                <i class="fa-solid fa-ellipsis-vertical" style="font-size: 2rem;" id="menu-toggle"></i>
-            </div>
-        
-            <!-- Menú flotante -->
-            <div id="dropdown-menu" class="dropdown-menu" style="display: none; position: absolute; z-index: 1000;">
-                <a href="/ajuste" class="dropdown-item">Ajustes</a>
-                <a href="/login" class="dropdown-item">Cerrar sesión</a>
-            </div>
-        </div>
+                        <!-- Menú flotante -->
+                        <div id="dropdown-menu" class="dropdown-menu"
+                            style="display: none; position: absolute; z-index: 1000;">
+                            <a href="/ajuste" class="dropdown-item">Ajustes</a>
+                            <a href="/login" class="dropdown-item">Cerrar sesión</a>
+                        </div>
+                    </div>
     </div>
 </div>
 
