--- a/src/views/views.dispositivos.movil.ejs
+++ b/src/views/views.dispositivos.movil.ejs
@@ -3,179 +3,69 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- framework boostrap  css-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <!-- icons bootstrap  -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <!-- custom style  -->
-    <link rel="stylesheet" href="/css/dispositivos.movil.css">
-    <title>Dispositivos moviles</title>
+    <title>Historial de Sesiones Móviles</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
 </head>
-<body class="devices_movil container-fluid h-100">
-    <!-- partial navbar -->
-    <%- include("partials/partial.navbar.usuarios.ejs") %>
-
-    <div class="devices_movil row">
-        <i class="devices_movil bi bi-arrow-left-short col-sm-1 col-md-1 col-lg-1 text-center display-6 pt-3"></i>
-        <p class="devices_movil h3 col-sm-10 col-md-9 col-lg-9 mt-1 p-3">Tus dispositivos</p>
-    </div>
-    
-    <div class="devices_movil row">
-        <p class="devices_movil h5 col-sm-5 col-md-5 col-lg-5 text-secondary mt-4 ms-3">Accediste a tu cuenta en estos dispositivos</p>
+<body class="sesiones_usuario container-fluid h-100">
+    <div class="sesiones_usuario row">
+        <p class="sesiones_usuario h3 col-sm-10 col-md-9 col-lg-9 mt-1 p-3">Historial de Sesiones Móviles</p>
     </div>
 
-    <!-- todos los dispositivos  -->
-    <div class="devices_movil row d-flex flex-wrap p-3">
-
-        <!-- un dispositivo  -->
-        <div class="devices_movil one_divice col-sm-12 col-md-3 col-lg-3 mt-4 mx-4">
-
-            <div class="devices_movil row border border-black rounded">
-
-                 <div class="devices_movil icon-phone col-sm-3 col-md-3 col-lg-3 center">
-                    <i class="devices_movil bi bi-phone-fill display-4" ></i>
-                </div>
-
-                <div class="devices_movil col-sm-9 col-md-9 col-lg-9"> 
-
-                    <div class="devices_movil row">
-                         <div class="devices_movil col-12 py-2">
-                            <p class="devices_movil fs-5 my-2"> Android <br> Colombia</p>
-                        </div>
-                        
-                        <div class="devices_movil col-12 center d-flex justify-content-between p-2">
-
-                            <div class="devices_movil col-sm-5 col-md-5 col-lg-5 rounded center-start ps-2 btn-salir " id="salir" onclick="salir()">
-                                
-                                <i class="devices_movil bi bi-box-arrow-left fs-6 me-2 text-primary" style="--bs-text-opacity: .5;"></i>
-                                <div class="devices_movil">Salir</div>
-
-                            </div>
-                            <div class="devices_movil col-sm-7 col-md-7 col-lg-7 rounded center-start p-2 btn-habilitar" id="habilitar" onclick="habilitar()">
-
-                                <i class="devices_movil bi bi-check2-square fs-6 me-2"></i>
-                                <div class="devices_movil">Habilitar</div>
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- un dispositivo  -->
-        <div class="devices_movil one_divice col-sm-12 col-md-3 col-lg-3 mt-4 mx-4">
-
-            <div class="devices_movil row border border-black rounded">
-
-                 <div class="devices_movil icon-phone col-sm-3 col-md-3 col-lg-3 center">
-                    <i class="devices_movil bi bi-phone-fill display-4" ></i>
-                </div>
-
-                <div class="devices_movil col-sm-9 col-md-9 col-lg-9"> 
-
-                    <div class="devices_movil row">
-                         <div class="devices_movil col-12 py-2">
-                            <p class="devices_movil fs-5 my-2"> Android <br> Colombia</p>
-                        </div>
-                        
-                        <div class="devices_movil col-12 center d-flex justify-content-between p-2">
-
-                            <div class="devices_movil col-sm-5 col-md-5 col-lg-5 rounded center-start ps-2 btn-salir" id="salir" onclick="salir()">
-                                
-                                <i class="devices_movil bi bi-box-arrow-left fs-6 me-2 text-primary" style="--bs-text-opacity: .5;"></i>
-                                <div class="devices_movil">Salir</div>
-
-                            </div>
-                            <div class="devices_movil col-sm-7 col-md-7 col-lg-7 rounded center-start p-2 btn-habilitar" id="habilitar" onclick="habilitar()">
-
-                                <i class="devices_movil bi bi-check2-square fs-6 me-2"></i>
-                                <div class="devices_movil">Habilitar</div>
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- un dispositivo  -->
-        <div class="devices_movil one_divice col-sm-12 col-md-3 col-lg-3 mt-4 mx-4">
-
-            <div class="devices_movil row border border-black rounded">
-
-                 <div class="devices_movil icon-phone col-sm-3 col-md-3 col-lg-3 center">
-                    <i class="devices_movil bi bi-phone-fill display-4" ></i>
-                </div>
-
-                <div class="devices_movil col-sm-9 col-md-9 col-lg-9"> 
-
-                    <div class="devices_movil row">
-                         <div class="devices_movil col-12 py-2">
-                            <p class="devices_movil fs-5 my-2"> Android <br> Colombia</p>
-                        </div>
-                        
-                        <div class="devices_movil col-12 center d-flex justify-content-between p-2">
-
-                            <div class="devices_movil col-sm-5 col-md-5 col-lg-5 rounded center-start ps-2 btn-salir" id="salir" onclick="salir()">
-                                
-                                <i class="devices_movil bi bi-box-arrow-left fs-6 me-2 text-primary" style="--bs-text-opacity: .5;"></i>
-                                <div class="devices_movil">Salir</div>
-
-                            </div>
-                            <div class="devices_movil col-sm-7 col-md-7 col-lg-7 rounded center-start p-2 btn-habilitar" id="habilitar" onclick="habilitar()">
-
-                                <i class="devices_movil bi bi-check2-square fs-6 me-2"></i>
-                                <div class="devices_movil">Habilitar</div>
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- un dispositivo  -->
-        <div class="devices_movil one_divice col-sm-12 col-md-3 col-lg-3 mt-4 mx-4">
-
-            <div class="devices_movil row border border-black rounded">
-
-                 <div class="devices_movil icon-phone col-sm-3 col-md-3 col-lg-3 center">
-                    <i class="devices_movil bi bi-phone-fill display-4" ></i>
-                </div>
-
-                <div class="devices_movil col-sm-9 col-md-9 col-lg-9"> 
-
-                    <div class="devices_movil row">
-                         <div class="devices_movil col-12 py-2">
-                            <p class="devices_movil fs-5 my-2"> Android <br> Colombia</p>
-                        </div>
-                        
-                        <div class="devices_movil col-12 center d-flex justify-content-between p-2">
-
-                            <div class="devices_movil col-sm-5 col-md-5 col-lg-5 rounded center-start ps-2 btn-salir" id="salir" onclick="salir()">
-                                
-                                <i class="devices_movil bi bi-box-arrow-left fs-6 me-2 text-primary" style="--bs-text-opacity: .5;"></i>
-                                <div class="devices_movil">Salir</div>
-
-                            </div>
-                            <div class="devices_movil col-sm-7 col-md-7 col-lg-7 rounded center-start p-2 btn-habilitar" id="habilitar" onclick="habilitar()">
-
-                                <i class="devices_movil bi bi-check2-square fs-6 me-2"></i>
-                                <div class="devices_movil">Habilitar</div>
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <div class="sesiones_usuario row">
+        <p class="sesiones_usuario h5 col-sm-5 col-md-5 col-lg-5 text-secondary mt-4 ms-3">Tus sesiones recientes en dispositivos móviles</p>
     </div>
 
-    
+    <!-- Contenedor para las sesiones móviles -->
+    <div id="sesionesMoviles" class="sesiones_usuario row d-flex flex-wrap p-3"></div>
 
-    <!-- framework bootstrap js -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <!-- custom script  -->
-     <script src="./js/dispositivos.movil.js"></script>
-    <!-- sweetalert script  -->
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script>
+        // Función para obtener y mostrar las sesiones móviles
+        async function cargarSesionesMoviles() {
+            try {
+                const response = await fetch('http://localhost:3000/users/sesiones-moviles');
+                const data = await response.json();
+
+                const sesionesMovilesContainer = document.getElementById('sesionesMoviles');
+
+                if (!data.error && Array.isArray(data.body)) {
+                    data.body.forEach(sesion => {
+                        const sessionElement = document.createElement('div');
+                        sessionElement.classList.add('sesiones_usuario', 'one_session', 'col-sm-12', 'col-md-3', 'col-lg-3', 'mt-4', 'mx-4');
+                        sessionElement.innerHTML = `
+                            <div class="sesiones_usuario row border border-black rounded">
+                                <div class="sesiones_usuario icon-device col-sm-3 col-md-3 col-lg-3 center">
+                                    <i class="sesiones_usuario bi bi-phone display-4"></i>
+                                </div>
+                                <div class="sesiones_usuario col-sm-9 col-md-9 col-lg-9">
+                                    <div class="sesiones_usuario row">
+                                        <div class="sesiones_usuario col-12 py-2">
+                                            <p class="sesiones_usuario fs-5 my-2">${sesion.dispositivo} <br> ${sesion.direccion_ip}</p>
+                                            <p class="sesiones_usuario fs-6 text-muted">${new Date(sesion.fecha_inicio_sesion).toLocaleString()}</p>
+                                        </div>
+                                        <div class="sesiones_usuario col-12 center d-flex justify-content-between p-2">
+                                            <div class="sesiones_usuario col-sm-5 col-md-5 col-lg-5 rounded center-start ps-2 btn-cerrar" onclick="cerrarSesion('${sesion.id}')">
+                                                <i class="sesiones_usuario bi bi-box-arrow-left fs-6 me-2 text-primary" style="--bs-text-opacity: .5;"></i>
+                                                <div class="sesiones_usuario">Cerrar</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        `;
+                        sesionesMovilesContainer.appendChild(sessionElement);
+                    });
+                } else {
+                    sesionesMovilesContainer.innerHTML = `<p>No se encontraron sesiones móviles</p>`;
+                }
+            } catch (error) {
+                console.error('Error al obtener sesiones móviles:', error);
+                document.getElementById('sesionesMoviles').innerHTML = `<p>Error al cargar las sesiones móviles</p>`;
+            }
+        }
+
+        // Llamar la función cuando la página se cargue
+        document.addEventListener('DOMContentLoaded', cargarSesionesMoviles);
+    </script>
 </body>
 </html>
