Funciona la vista de cambio de contraseña en el panel

--- a/src/views/views.contrasena.ejs
+++ b/src/views/views.contrasena.ejs
@@ -78,7 +78,7 @@
 
                     <div class="container_contenido_botones">
                         <button class="btn-cancelar">Cancelar</button>
-                        <button class="btn-save">Guardar</button>
+                        <button class="btn-save" onclick="cambiarContrasena();">Guardar</button>
                     </div>
                 </div>
 
