--- a/src/views/views.nuevaClave.ejs
+++ b/src/views/views.nuevaClave.ejs
@@ -1,38 +1,62 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Recuperar Clave</title>
     <link rel="stylesheet" href="/css/recuperarClave.css" />
-  </head>
-  <body>
+    <style>
+        .success-message {
+          color: rgb(152, 255, 152);
+          font-size: 14px;
+          margin-top: 5px;
+        }
+        .error-message {
+          color: red;
+          font-size: 14px;
+          margin-top: 5px;
+        }
+        .containerCampo {
+          display: flex;
+          flex-direction: column; 
+          align-items: center; 
+        }
+        #message {
+          width: 80%; 
+        }
+      </style>
+</head>
+<body>
     <div class="containerBlur">
-      <div class="containerCaja">
-        <h1 class="tituloCaja">Restablecer Contraseña</h1>
-        <p class="mensaje">Ingrese la nueva contraseña</p>
-        <div class="containerCampo">
-          <input
-            class="campo"
-            type="password"
-            name="clave"
-            id="clave"
-            placeholder="Ingrese la contraseña"
-          />
+        <div class="containerCaja">
+            <h1 class="tituloCaja">Restablecer Contraseña</h1>
+            <p class="mensaje">Ingrese la nueva contraseña</p>
+            <div class="containerCampo">
+                <input
+                    class="campo"
+                    type="password"
+                    name="clave"
+                    id="clave"
+                    placeholder="Ingrese la nueva contraseña"
+                />
+                <div id="message"></div>
+            </div>
+            
+            <div class="containerCampo2">
+                <input
+                    class="campo"
+                    type="password"
+                    name="claveConfirmacion"
+                    id="claveConfirmacion"
+                    placeholder="Confirme la contraseña"
+                />
+            </div>
+            
+            <div class="containerBtn">
+                <input class="btn" type="submit" value="Guardar" id="submitBtn" />
+            </div>
         </div>
-        <div class="containerCampo2">
-          <input
-            class="campo"
-            type="password"
-            name="claveConfirmacion"
-            id="claveConfirmacion"
-            placeholder="Confirme la contraseña"
-          />
-        </div>
-        <div class="containerBtn">
-          <input class="btn" type="submit" value="Guardar" />
-        </div>
-      </div>
     </div>
-  </body>
+    <script src="/js/nuevaClave.js"></script>
+</body>
 </html>
